
add_subdirectory(hello_nrhi)
if(NRHI_DRIVER_SUPPORT_ADVANCED_RESOURCE_BINDING AND NRHI_DRIVER_SUPPORT_ADVANCED_RESOURCE_MANAGEMENT AND NRHI_DRIVER_SUPPORT_ADVANCED_WORK_SUBMISSION)
add_subdirectory(hello_nrhi_advanced)
endif()

add_subdirectory(adapter)
add_subdirectory(device)
add_subdirectory(command_queue)
add_subdirectory(command_list)
add_subdirectory(command_list_copy_resource_advanced)
if(NRHI_DRIVER_SUPPORT_ADVANCED_WORK_SUBMISSION)
    add_subdirectory(command_allocator)
endif()
add_subdirectory(fence)
add_subdirectory(swapchain)
add_subdirectory(swapchain_with_clear)
add_subdirectory(resource)
add_subdirectory(map_unmap_resource_advanced)
add_subdirectory(resource_binding)
add_subdirectory(pipeline_state)
if(NRHI_DRIVER_SUPPORT_ADVANCED_WORK_SUBMISSION)
    add_subdirectory(pipeline_state_with_root_signature)
    add_subdirectory(root_signature)
endif()
if(NRHI_DRIVER_SUPPORT_WORK_GRAPHS)
    add_subdirectory(work_graphs)
endif()

add_subdirectory(nsl)